[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Pause.gd" type="Script" id=1]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 75.0
margin_right = 75.0
margin_bottom = 165.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unpause" type="Button" parent="Options"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
text = "Stay in the Fight!"

[node name="leave" type="Button" parent="Options"]
margin_top = 50.0
margin_right = 150.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 40 )
text = "Run Away!"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.0
margin_top = 50.0
margin_right = 23.0
margin_bottom = 64.0
text = "CARGO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cargo_pickups" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -130.0
margin_right = 200.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Options/unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="Options/leave" to="." method="_on_leave_pressed"]
